# opengl-raymarcher

./: .clang-format  CMakeLists.txt  TODO.md  build.bat  build.sh
include/glad/: gl.h  glad.h
shaders/: ps_scale.glsl  ps_test.glsl  vs_test.glsl
shared/: README.md  lighting.h  march.h  object.h  shadows.h
src/: config.h  debug.h  frame.cpp  frame_buffer.h  game.cpp  game.h  glad.c  main.cpp  main_window.cpp  main_window.h  mainwindow.cpp  mainwindow.h  player.cpp  player.h  shader.cpp  shader.h  shader_compiler.cpp  shader_compiler.h  shader_program.cpp  shader_program.h  window.cpp  window.h
